--- a/site/index.html
+++ b/site/index.html
@@ -586,7 +586,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="https://github.com/mstoutjesdyk/probable-eureka/edit/master/docs/index.md" class="nav-link"><i class="fa fa-github"></i> Edit on GitHub</a>
+                                <a href="https://github.com/mstoutjesdyk/probable-eureka.git/edit/master/docs/index.md" class="nav-link"><i class="fa fa-github"></i> Edit on GitHub</a>
                             </li>
                     </ul>
                 </div>
@@ -791,5 +791,5 @@ Science Commons of the Univeristy of Lethbridge, in Lethbridge, Alberta. </p>
 
 <!--
 MkDocs version : 1.3.0
-Build Date UTC : 2022-07-18 21:59:14.512211+00:00
+Build Date UTC : 2022-07-18 22:57:20.126435+00:00
 -->
