--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="None">
         <meta name="author" content="Marielle Stoutjesdyk">
-        
+        <link rel="canonical" href="https://mstoutjesdyk.github.io/probable-eureka/">
         <link rel="shortcut icon" href="img/favicon.ico">
         <title>AUC University</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -791,5 +791,5 @@ Science Commons of the Univeristy of Lethbridge, in Lethbridge, Alberta. </p>
 
 <!--
 MkDocs version : 1.3.0
-Build Date UTC : 2022-07-18 23:06:46.531790+00:00
+Build Date UTC : 2022-07-19 00:23:04.322932+00:00
 -->
