--- a/instru/index.html
+++ b/instru/index.html
@@ -640,7 +640,7 @@ This newer AUC produced digital absorbance data, were smaller, and overall more 
 </ol>
 <div class="admonition warning">
 <p class="admonition-title">Beckman Coulter Optima AUC</p>
-<p><img _="," align="right" alt="" src="/img/optima.png" width="250" /></p>
+<p><img _="," align="right" alt="" src="/probable-eureka/img/optima.png" width="250" /></p>
 <ul>
 <li>
 <p>10 micron radial resolution</p>
