--- a/site/index.html
+++ b/site/index.html
@@ -617,7 +617,7 @@
 
 <h1 id="oki-welcome">Oki! Welcome!</h1>
 <p>The University of Lethbridge, Alberta, is located Treaty 7 territory which is the traditional land of the Blackfoot Confederacy (Kainai, Siksika, and Piikani), the Tsuu T'ina, and the Metis peoples of Southern Alberta. We strive to acknowledge their ownership of this land, and to return it back to them.</p>
-<p><img alt="" src="/img/banners/sab.jpg" width="textwidth" />
+<p><img alt="" src="/probable-eureka/img/banners/sab.jpg" width="textwidth" />
 Science Commons of the Univeristy of Lethbridge, in Lethbridge, Alberta. </p>
 <p>As biochemists and biophysicsts, we need to be able to:</p>
 <ol>
@@ -791,5 +791,5 @@ Science Commons of the Univeristy of Lethbridge, in Lethbridge, Alberta. </p>
 
 <!--
 MkDocs version : 1.3.0
-Build Date UTC : 2022-07-19 00:48:21.073990+00:00
+Build Date UTC : 2022-07-19 01:02:35.421317+00:00
 -->
