--- a/site/instru/index.html
+++ b/site/instru/index.html
@@ -640,7 +640,7 @@ This newer AUC produced digital absorbance data, were smaller, and overall more 
 </ol>
 <div class="admonition warning">
 <p class="admonition-title">Beckman Coulter Optima AUC</p>
-<p><img _="," align="right" alt="" src="/img/optima.png" width="250" /></p>
+<p><img _="," align="right" alt="" src="/probable-eureka/img/optima.png" width="250" /></p>
 <ul>
 <li>
 <p>10 micron radial resolution</p>
@@ -666,7 +666,7 @@ users. These enhanced features enable shorter experiments with increased resolut
 to yeild better data with greater efficieny.
 The advantages of the Optima AUC were listed as: convenient operation &amp; control, increased data quality &amp; resolution, and time-saving features that improve efficieny. </p>
 <p>An analytical ultracentrifuge has several main components:</p>
-<p><img alt="Rotor Chamber" src="/img/optima-chamber.jpg" style="float: right;margin-right: 20px;margin-top: 20px;" /></p>
+<p><img alt="Rotor Chamber" src="/probable-eureka/img/optima-chamber.jpg" style="float: right;margin-right: 20px;margin-top: 20px;" /></p>
 <p><strong>CHAMBER:</strong> The rotor chamber is made of aluminium, coated with a chemical-resistant expoxy finish. Along with the rotor drive spindle, several sensors and ccontrol systems are contained within the chamber.</p>
 <p><strong>VACUUM SYSTEM:</strong> The vacuum system consists of a diffusion pump in series with a mechanical vacuum pump. The system starts automatically when a run is stated, or manually with "Vacuum" on the touch screen. When the vacuum system is on, the chamber pressure will be displayed in microns.
 To vent the vacuum after a run is finised, select the "Vent Vacuum" button on the display screen. After the door is opened, you will have a 5-minute window to switch out the rotors/cells wherein the chamber temperature remains as set. After this time period, the chamber will return to the approximate room temperaure to minimize any condensation collection within the chamber.</p>
